--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
     
     </body>
         
-        <section class=" ">
-            <h2></h2>
-            <p></p>
+       <section class="SAEB">
+            <h2>Aulas praticas com foco no aprendizado para o SAEB,</h2>
+            <p>As aulas práticas têm como objetivo principal proporcionar uma aprendizagem sólida e eficaz, focada no preparo para o Sistema de Avaliação da Educação Básica (SAEB).
+                Durante as aulas, busca-se intensificar a interação com os alunos, promovendo um ambiente mais dinâmico e colaborativo para o aprendizado. 
+                   Além disso, oferecemos aulas de recomposição, com ênfase nas disciplinas de Matemática e Português, permitindo que os estudantes reforcem e consolidem os conteúdos essenciais de forma mais aprofundada. 
+                A proposta visa não só melhorar o desempenho acadêmico, mas também estimular o desenvolvimento de competências e habilidades que serão fundamentais para o sucesso nas avaliações e na continuidade do percurso escolar.</p>
         </section>
 
         <section class=" ">
@@ -77,4 +80,5 @@
 </body>
 
 </html>
+
 
