--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 A proposta visa não só melhorar o desempenho acadêmico, mas também estimular o desenvolvimento de competências e habilidades que serão fundamentais para o sucesso nas avaliações e na continuidade do percurso escolar.</p>
         </section>
 
-        <section class=" ">
+        <section class="SAEB">
      <h2>Qual a importância do SAEB para a escola?</h2>
  
   <p>O Saeb (Sistema de Avaliação da Educação Básica) é crucial para as escolas porque fornece dados detalhados sobre o desempenho dos alunos e a qualidade do ensino oferecido. Esses dados ajudam as escolas a identificar pontos fortes e fracos em seus currículos e metodologias, permitindo ajustes para melhorar o processo de ensino-aprendizagem.</p>
@@ -106,6 +106,7 @@
 </body>
 
 </html>
+
 
 
 
