--- a/index.html
+++ b/index.html
@@ -94,9 +94,13 @@
   <p>A divulgação dos resultados do Saeb pode ser um momento de diálogo e engajamento com a comunidade escolar, incluindo alunos, pais e professores, na busca por soluções para os desafios identificados.</p>
 </section>
 
-        <section class=" ">
-            <h2> </h2>
-            <p> </p>
+        <section class=" SAEB ">
+            <h2> O Que É o SAEB? </h2>
+            <p> O Sistema de Avaliação da Educação Básica (Saeb) é um conjunto de avaliações em larga escala que o governo brasileiro usa para diagnosticar a qualidade do ensino no país.
+
+Ele aplica testes de Língua Portuguesa e Matemática para alunos de diferentes etapas da educação básica, além de questionários para estudantes, professores e diretores.
+
+Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Escolar, são a base para calcular o Índice de Desenvolvimento da Educação Básica (Ideb). O Ideb é uma nota que mede a qualidade da educação de cada escola e rede de ensino. </p>
         </section>
     </main>
 
@@ -106,6 +110,7 @@
 </body>
 
 </html>
+
 
 
 
