--- a/index.html
+++ b/index.html
@@ -101,7 +101,21 @@
 Ele aplica testes de Língua Portuguesa e Matemática para alunos de diferentes etapas da educação básica, além de questionários para estudantes, professores e diretores.
 
 Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Escolar, são a base para calcular o Índice de Desenvolvimento da Educação Básica (Ideb). O Ideb é uma nota que mede a qualidade da educação de cada escola e rede de ensino. </p>
+
+ <section class=" SAEB ">
+         <h2>Ações desenvolvidas nas aulas de R.A</h2>
+        <p>No último trimestre, as professoras responsáveis pelas aulas de recomposição de aprendizagem em Português
+            realizaram uma experiência com nossa turma. Nessa atividade, cada aluno pôde registrar, em um papel,
+            sugestões sobre o que gostariam de mudar nas aulas. As professoras se comprometeram a fazer o possível para
+            atender a todos os pedidos.</p>
+        <p>A partir desse momento, nossas aula passaram por mudanças significativas. Foi realizado um café com ideias,
+            no qual colocamos nosso objetivo de vida e o processo para alcança-lo. Dessa forma, as aulas de R.A
+            tornaran-se muito diferentes do que eram anteriormente.</p>
+        <p>As demais disciplinas não apresentam aulas tão práticas, tanto individual quanto em grupo. Essas modificações
+            contribuiram para um ambiente de aprendizagem mais dinâmico e participativo.</p>
+            
         </section>
+        
     </main>
 
     <footer>
@@ -110,6 +124,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
 </body>
 
 </html>
+
 
 
 
