--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
+    meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> </title>
-    <link rel=" " href=" ">
+    <title>SAEB </title>
+    <link rel="stylesheet " href="styles.css ">
 </head>
 <style>
     body {
@@ -136,6 +136,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
 </body>
 
 </html>
+
 
 
 
