--- a/index.html
+++ b/index.html
@@ -131,11 +131,12 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
     </main>
 
     <footer>
-        <p> </p>
+        <p>site colaborativo desenvolvido pelos alunos do terceiro ano </p>
     </footer>
 </body>
 
 </html>
+
 
 
 
