--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por 3A. Projeto fictício sem fins comerciais.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
@@ -185,6 +185,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
 </body>
 
 </html>
+
 
 
 
