--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <html lang="pt-br">
 
 <head>
-   
+    meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAEB </title>
     <link rel="stylesheet" href="styles.css">
@@ -98,6 +98,15 @@
                 A proposta visa não só melhorar o desempenho acadêmico, mas também estimular o desenvolvimento de competências e habilidades que serão fundamentais para o sucesso nas avaliações e na continuidade do percurso escolar.</p>
         </section>
 
+        <section class=" SAEB ">
+            <h2> O Que É o SAEB? </h2>
+            <p> O Sistema de Avaliação da Educação Básica (Saeb) é um conjunto de avaliações em larga escala que o governo brasileiro usa para diagnosticar a qualidade do ensino no país.
+
+Ele aplica testes de Língua Portuguesa e Matemática para alunos de diferentes etapas da educação básica, além de questionários para estudantes, professores e diretores.
+
+Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Escolar, são a base para calcular o Índice de Desenvolvimento da Educação Básica (Ideb). O Ideb é uma nota que mede a qualidade da educação de cada escola e rede de ensino. </p>
+   </section>
+
         <section class="SAEB">
      <h2>Qual a importância do SAEB para a escola?</h2>
  
@@ -106,7 +115,8 @@
   <p>Além disso, o Saeb permite a comparação dos resultados entre diferentes escolas e redes de ensino, auxiliando na identificação de boas práticas e no desenvolvimento de estratégias para aprimorar a educação.</p>
  
   <h3>Benefícios do Saeb para as escolas:</h3>
- 
+ <p>O Saeb tem sendo cada vez mais importante para e escola e para o estudande, ele é usado como método avaliativo e para saber o quanto a escola vai ganhar de recursos de acordo com a nota dos terceiros e nonos anos.</p>
+
   <h4>Diagnóstico da qualidade da educação:</h4>
   <p>O Saeb oferece um retrato da realidade educacional da escola, permitindo identificar quais áreas precisam de mais atenção e investimento.</p>
  
@@ -128,15 +138,6 @@
   <h4>Engajamento da comunidade escolar:</h4>
   <p>A divulgação dos resultados do Saeb pode ser um momento de diálogo e engajamento com a comunidade escolar, incluindo alunos, pais e professores, na busca por soluções para os desafios identificados.</p>
 </section>
-
-        <section class=" SAEB ">
-            <h2> O Que É o SAEB? </h2>
-            <p> O Sistema de Avaliação da Educação Básica (Saeb) é um conjunto de avaliações em larga escala que o governo brasileiro usa para diagnosticar a qualidade do ensino no país.
-
-Ele aplica testes de Língua Portuguesa e Matemática para alunos de diferentes etapas da educação básica, além de questionários para estudantes, professores e diretores.
-
-Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Escolar, são a base para calcular o Índice de Desenvolvimento da Educação Básica (Ideb). O Ideb é uma nota que mede a qualidade da educação de cada escola e rede de ensino. </p>
-   </section>
         
  <section class=" SAEB ">
          <h2>Ações desenvolvidas nas aulas de R.A</h2>
@@ -177,7 +178,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
         <i class="bi bi-whatsapp"></i>
         <i class="bi bi-instagram"></i>
         <i class="bi bi-tiktok"></i>
-        <p class="mt-3">Desenvolvido por 3A. Projeto fictício sem fins comerciais.</p>
+        <p class="mt-3">Desenvolvido por Start by Alura. Projeto fictício sem fins comerciais.</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollReveal.js/4.0.9/scrollreveal.js"></script>
     <script src="script.js"></script>
@@ -185,8 +186,6 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
 </body>
 
 </html>
-
-
 
 
 
