--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     body {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: left;
+        align-items: left;
         height: 100vh; 
         margin: 0;
         font-family: sans-serif;
@@ -152,7 +152,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
             contribuiram para um ambiente de aprendizagem mais dinâmico e participativo.</p>
         </section>
 
-        <section class="SAEB?">
+        <section class="SAEB">
             <h2>Qual o papel do estudante no SAEB? </h2>
             <p>O estudante deve se dedicar e fazer o SAEB com responsabilidade, pois essa prova é para avaliar o
             desempenho do aluno e da escola, assim será possível que o governo e as equipes pedagógicas criem
@@ -186,6 +186,7 @@ Os resultados do Saeb, junto com dados de aprovação e reprovação do Censo Es
 </body>
 
 </html>
+
 
 
 
